force-app/main/default/objects/SBQQ__QuoteLineConsumptionRate__c/fields/SBQQ__OriginalPrice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__OriginalPrice__c</fullName>
        <label>Original Price</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Currency</type>
    </CustomField>