force-app/main/default/objects/SBQQ__QuoteLineConsumptionRate__c/fields/SBQQ__PricingMethod__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__PricingMethod__c</fullName>
        <label>Pricing Method</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PerUnit</fullName>
                    <label>Per Unit</label>
                </value>
                <value>
                    <fullName>FlatFee</fullName>
                    <label>Flat Fee</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>