force-app/main/default/objects/SBQQ__QuoteLineConsumptionRate__c/fields/SBQQ__ProcessingOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProcessingOrder__c</fullName>
        <inlineHelpText>The order for processing the usage rate across multiple rates. Consumption Rates are evaluated beginning with the lowest processing order.</inlineHelpText>
        <label>Processing Order</label>
        <precision>9</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>