force-app/main/default/objects/SBQQ__QuoteLineConsumptionRate__c/fields/SBQQ__QuoteLineConsumptionSchedule__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__QuoteLineConsumptionSchedule__c</fullName>
        <inlineHelpText>This rate is a part of of this schedule.</inlineHelpText>
        <label>Quote Line Consumption Schedule</label>
        <referenceTo>SBQQ__QuoteLineConsumptionSchedule__c</referenceTo>
        <relationshipLabel>Quote Line Consumption Rates</relationshipLabel>
        <relationshipName>QuoteLineConsumptionRates</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </CustomField>